one version of author format

--- a/headers.tex
+++ b/headers.tex
@@ -96,6 +96,8 @@
 
 \newcommand{\edge}[2]{\mypar{#1,#2}}
 
+\newcommand{\scaleoptimum}{0.5}
+\newcommand{\scaleexact}{0.5}
 
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator*{\argmax}{arg\,max}
