another version of author format

--- a/main.tex
+++ b/main.tex
@@ -11,20 +11,45 @@
 \fancyhead{}
 \title{Absorbing Time of Random Walks as a Node Group Centrality}
 \author{Haisong Xia}
-\author{Xiaotian Zhou}
-\author{Zhongzhi Zhang\footnotemark}
-\email{{hsxia18,20210240043,zhangzz}@fudan.edu.cn}
+\email{hsxia22@m.fudan.edu.cn}
 \affiliation{
-  \institution{Shanghai Key Laboratory of Intelligent Information Processing, Fudan University, Shanghai 200433, China\\
-    School of Computer Science, Fudan University, Shanghai 200433, China}
-  \city{}\country{}
+  \institution{Fudan University}
+  \city{Shanghai 200433}
+  \country{China}
+}
+\author{Xiaotian Zhou}
+\email{20210240043@fudan.edu.cn}
+\affiliation{
+  \institution{Fudan University}
+  \city{Shanghai 200433}
+  \country{China}
 }
 \author{Zhuoqing Song}
 \email{zqsong19@fudan.edu.cn}
 \affiliation{
-  \institution{Shanghai Center for Mathematical Sciences, Fudan University, Shanghai 200433, China}
-  \city{}\country{}
+  \institution{Fudan University}
+  \city{Shanghai 200433}
+  \country{China}
 }
+\author{Zhongzhi Zhang\footnotemark}
+\email{zhangzz@fudan.edu.cn}
+\affiliation{
+  \institution{Fudan University}
+  \city{Shanghai 200433}
+  \country{China}
+}
+% \email{{hsxia18,20210240043,zhangzz}@fudan.edu.cn}
+% \affiliation{
+%   \institution{Shanghai Key Laboratory of Intelligent Information Processing, Fudan University, Shanghai 200433, China\\
+%     School of Computer Science, Fudan University, Shanghai 200433, China}
+%   \city{}\country{}
+% }
+% \author{Zhuoqing Song}
+% \email{zqsong19@fudan.edu.cn}
+% \affiliation{
+%   \institution{Shanghai Center for Mathematical Sciences, Fudan University, Shanghai 200433, China}
+%   \city{}\country{}
+% }
 \begin{abstract}
   In the field of complex networks, the usage of random walk and its relevant quantities arises in many academic researches.
   In this paper, we consider the connection among Kemeny constant, absorbing random-walk centrality and random detour time, then subsequently extend it to the case of multiple nodes.
